src/objects/Branch_Control_Log__c.object
<CustomObject>
    <fields>
        <fullName>Actioned_byProcedures__c</fullName>
        <label>Actioned by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actioned_by_KeyRegiste__c</fullName>
        <label>Actioned by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_procedures_read_by_staff__c</fullName>
        <inlineHelpText>All staff read Premises &amp; Security, Cashiering and Health and Safety procedures. 
Staff to sign the Refresher document to evidence reading.</inlineHelpText>
        <label>All procedures read by staff</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Branch_Documents__c</referenceTo>
        <relationshipLabel>Branch Control Logs</relationshipLabel>
        <relationshipName>Branch_Control_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CommentsProcedures__c</fullName>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_KeyRegister__c</fullName>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_register_check_completed__c</fullName>
        <inlineHelpText>Check the record of keys for each member of staff by  comparing it to the actual keys in thier possession.  
Sign the key register for each staff member to evidence check.</inlineHelpText>
        <label>Key register check completed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Branch Control Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BCL{DD}{MM}{YY}{0000}</displayFormat>
        <label>Branch Control Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Branch Control Logs</pluralLabel>
    <recordTypes>
        <fullName>Daily_BCL</fullName>
        <active>true</active>
        <description>To be completed daily by each branch</description>
        <label>1.Daily BCL</label>
    </recordTypes>
    <recordTypes>
        <fullName>Half_Yearly_BCL</fullName>
        <active>true</active>
        <description>To be completed half yearly by each branch</description>
        <label>5.Half Yearly BCL</label>
    </recordTypes>
    <recordTypes>
        <fullName>Monthly_BCL</fullName>
        <active>true</active>
        <description>To be completed monthly by each branch</description>
        <label>3.Monthly BCL</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quarterly_BCL</fullName>
        <active>true</active>
        <description>To be completed quarterly by each branch</description>
        <label>4.Quarterly BCL</label>
    </recordTypes>
    <recordTypes>
        <fullName>Weekly_BCL</fullName>
        <active>true</active>
        <description>To be completed weekly by each branch</description>
        <label>2.Weekly BCL</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>